--- a/Commonfee/package.json
+++ b/Commonfee/package.json
@@ -27,6 +27,7 @@
     "express": "^4.18.2",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.3",
+    "jwt-decode": "^4.0.0",
     "qrcode": "^1.5.4",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.6.13",
