--- a/Commonfee/package.json
+++ b/Commonfee/package.json
@@ -16,11 +16,13 @@
     "@angular/compiler": "^18.1.0",
     "@angular/core": "^18.1.0",
     "@angular/forms": "^18.1.0",
+    "@angular/google-maps": "^18.2.8",
     "@angular/platform-browser": "^18.1.0",
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/platform-server": "^18.1.0",
     "@angular/router": "^18.1.0",
     "@angular/ssr": "^18.1.1",
+    "@asymmetrik/ngx-leaflet": "^18.0.1",
     "angularx-qrcode": "^18.0.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
@@ -28,6 +30,7 @@
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.3",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "qrcode": "^1.5.4",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.6.13",
