--- a/Commonfee/package.json
+++ b/Commonfee/package.json
@@ -23,10 +23,12 @@
     "@angular/router": "^18.1.0",
     "@angular/ssr": "^18.1.1",
     "@asymmetrik/ngx-leaflet": "^18.0.1",
+    "angular-highcharts": "^17.0.1",
     "angularx-qrcode": "^18.0.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "express": "^4.18.2",
+    "highcharts": "^11.4.8",
     "jspdf": "^2.5.2",
     "jspdf-autotable": "^3.8.3",
     "jwt-decode": "^4.0.0",
