--- a/real api/package.json
+++ b/real api/package.json
@@ -18,6 +18,7 @@
     "moment-timezone": "^0.5.45",
     "morgan": "^1.10.0",
     "mssql": "^11.0.1",
+    "multer": "^1.4.5-lts.1",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui": "^5.17.14",
     "tedious": "^18.6.1"
