--- a/real api/package.json
+++ b/real api/package.json
@@ -20,6 +20,8 @@
     "morgan": "^1.10.0",
     "mssql": "^11.0.1",
     "multer": "^1.4.5-lts.1",
+    "promptpay-qr": "^0.5.0",
+    "qrcode": "^0.9.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui": "^5.17.14",
     "tedious": "^18.6.1"
