--- a/real api/package.json
+++ b/real api/package.json
@@ -16,10 +16,12 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
     "morgan": "^1.10.0",
     "mssql": "^11.0.1",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.16",
     "promptpay-qr": "^0.5.0",
     "qrcode": "^0.9.0",
     "swagger-jsdoc": "^6.2.8",
